wave animation, need to fix overflow

--- a/FinalProject/src/app.css
+++ b/FinalProject/src/app.css
@@ -47,3 +47,51 @@ html {
         transform: translateY(-120vh) rotate(var(--random-offset));
     }
 }
+
+footer {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 120px;
+    z-index: -1;
+}
+
+.wave {
+    position: absolute;
+    bottom: 0;
+    width: 200%;
+    height: 100px;
+    background: url('/images/wave.png') repeat-x;
+    animation: wave-animation 10s linear infinite;
+    opacity: 0.5;
+}
+
+.wave1 {
+    animation: wave-animation 30s linear infinite;
+    z-index: 1000;
+    opacity: 1;
+    bottom: 0;
+}
+
+.wave2 {
+    animation: wave-animation 30s linear infinite;
+    z-index: 999;
+    opacity: 0.5;
+    bottom: 5px;
+}
+
+.wave3 {
+    animation: wave-animation 15s linear infinite;
+    z-index: 998;
+    opacity: 0.7;
+    bottom: 10px;
+}
+
+@keyframes wave-animation {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
